fix layout issues with item page sidebar

--- a/app/javascript/stylesheets/partials/item-page-sidebar.scss
+++ b/app/javascript/stylesheets/partials/item-page-sidebar.scss
@@ -5,8 +5,9 @@
   box-shadow: none;
   padding: 10px;
 
-  & .panel-body {
-    padding: 0;
+  & .list-group-item {
+    border: none;
+    padding: 10px;
   }
 }
 
@@ -47,8 +48,7 @@
 .doi {
   animation-duration: .9s;
   align-items: center;
-  border: 0;
-  bottom: 0;
+  bottom: 2px;
   display: flex;
   font-size: 14px;
   position: fixed;
@@ -89,15 +89,15 @@
   }
 }
 
-.social-buttons {
+.social_buttons {
   line-height: 1;
 }
 
-.social-buttons a {
+.social_buttons a {
   margin: 0 6px 0 0;
 }
 
-.use-and-reproduction {
+.use_and_reproduction {
   font-size: 12px;
 
   & a {
@@ -124,12 +124,15 @@
 
   .show-tools {
     margin-top: 15px;
+    
+    & .list-group-item {
+      padding: 0 0 8px 0;
+    }
   }
 
   .asset_buttons {
     animation: none;
     background: transparent;
-    border: 0;
     bottom: auto;
     box-shadow: none;
     display: block;
@@ -151,15 +154,13 @@
     animation: none;
     bottom: auto;
     flex-wrap: wrap;
-    padding: 13px 0;
     position: relative;
     right: auto;
     width: 100%;
 
     & label.doi-label {
       flex: none;
-      margin-bottom: 2px;
-      margin-right: 0;
+      margin: 2px 0;
       width: 100%;
     }
 
